--- a/authentication/first_app/templates/profile.html
+++ b/authentication/first_app/templates/profile.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+
 {% block body %}
-<h1>This is Homepage</h1>
+<h1>Welcome to your profile</h1>
+<h1>Hello {{user}}</h1>
 {% endblock body %}
