--- a/authentication/first_app/templates/signup.html
+++ b/authentication/first_app/templates/signup.html
@@ -12,5 +12,7 @@
     {% csrf_token %}
     {{form|crispy}}
     <button class="btn btn-primary" type="submit">Submit</button>
+    <br>
+    <small>Already have an account <a href={% url "login_page" %}>Login</a></small>
     </form>
 {% endblock body %}
