--- a/authentication/first_app/templates/profile.html
+++ b/authentication/first_app/templates/profile.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block body %}
+{% if messages %}
+    {% for m in messages %}
+    <small class="bg-success p-3 text-white"> {{m}} </small>
+    {% endfor %}
+{% endif %}
 <h1>Welcome to your profile</h1>
 <h1>Hello {{user}}</h1>
+<p><a class="btn btn-info" href={% url "change_password" %}>Change Password</a> </p>
+<p><a class="btn btn-warning" href={% url "change_password2" %}>Change Password without old Password</a></p>
+
+<form method = 'post' style="width: 50%; margin: auto;" novalidate>
+    {% csrf_token %}
+    {{form|crispy}}
+    <button class="btn btn-primary" type="submit">Change Data</button>
+</form>
 {% endblock body %}
